test/conformance/chainsaw/mutate/clusterpolicy/cornercases/mutate-using-default-context/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: 'bad-box'
spec:
  terminationGracePeriodSeconds: 10
  automountServiceAccountToken: false
  containers:
  - name: busybox
    image: busybox:latest
    command: ["sleep", "9999"]
