test/conformance/chainsaw/mutate/clusterpolicy/cornercases/mutate-using-default-context/pod-assert.yaml
apiVersion: v1
kind: Pod
metadata:
  name: 'bad-box'
  labels:
    foo: bar
spec:
  automountServiceAccountToken: false
  containers:
  - name: busybox
    image: busybox:latest
    command: ["sleep", "9999"]
