test/conformance/chainsaw/mutate/clusterpolicy/cornercases/mutate-using-default-context/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: pod-add-labels
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
