test/conformance/chainsaw/mutate/clusterpolicy/cornercases/mutate-using-default-context/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: mutate-using-default-context
spec:
  concurrent: false
  steps:
  - name: create policy
    use:
      template: ../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: pod-add-labels
  - name: step-01
    try:
    - apply:
        file: pod.yaml
    - assert:
        file: pod-assert.yaml
